--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -8,17 +8,28 @@
 </head>
 <body>
 <div id="qunit"></div>
-<div id="qunit-fixture"></div>
+<div id="qunit-fixture">
+    <form>
+        <input name="text"/>
+        <div class="has-error">Error text</div>
+    </form>
+</div>
+
 <script src="https://code.jquery.com/qunit/qunit-2.16.0.js"></script>
-<script
-  src="https://code.jquery.com/jquery-3.6.0.min.js"
-  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-  crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script src="../list.js"></script>
 
 <script>
-    QUnit.test("smoke test", function (assert) {
-        assert.equal(1, 1, "Maths works!");
-    });
+   QUnit.test('errors should be hidden on keypress', function (assert) {
+       initialize()
+       $('input[name="text"]').trigger('keypress');
+       assert.equal($('.has-error').is(':visible'), false);
+   });
+   QUnit.test('errors are not hidden if there is no keypress', function (assert) {
+       initialize()
+       assert.equal($('.has-error').is(':visible'), true);
+   });
 </script>
 </body>
 </html>
